2014-09-30  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Remove '%cond-expand'.

2014-09-28  Per Bothner  <per@bothner.com>

	* standard/Include.java: New Syntax class for handling 'include'.
	* Makefile.am: Update accordingly.
	* standard/Scheme.java (initScheme): Add 'include-ci' and update
	'include' and 'include-relative'.

2014-09-26  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): 'define-record-type' was
	moved from gnu.kawa.slib to kawa.lib.
	Added 'bytevector?' as an explicit (not implicit) definition.

2014-09-22  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Define 'define-values'.

2014-09-20  Per Bothner  <per@bothner.com>

	Remember current scope when we create a TemplateScope.  Just remembering
	the macro scope may be insufficient for generated macros.
	* lang/SyntaxTemplate.java (savedScope): New field.
	(execute): Don't take TemplateScope parameter, instead calculate it.
	* lang/SyntaxRules.java (<init>)update call to execute.
	* lang/TemplateScope.java (make): Take savedScope parameter.
	* standard/syntax.java: Update to disambiguate execute method.

2014-09-15  Per Bothner  <per@bothner.com>

	* Shell.java (run): If parse or rewrite error, pop the new
	ModuleExp to clear semi-processed declarations.

	* lang/SyntaxPattern.java (printSyntaxPatternMatch):  New static flag.
	(match): Maybe print log information.
	* repl.java: Maybe set printSyntaxPatternMatch.

	* lang/SyntaxPattern.java (fileLine): New field.
	(<init>): Set fileLine.
	(writeExternal, readExternal): Write/set fileLine.
	(match): Use fileLine.
	(toString): New method.
	* lang/Pattern.java (print): New default method.

2014-09-07  Per Bothner  <per@bothner.com>

	* lang/Translator.java (pushPositionOf): Generalize to SourceLocator.

	* standard/Scheme.java (initScheme): Renamed '5syntax-error'
	to 'syntax-error', which is in r7rs.
	* standard/syntax_error.java: updated.

2014-09-05  Per Bothner  <per@bothner.com>
